artifacts/istio/gw-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-httpbin-vs
spec:
  hosts:
  - "*"
  gateways:
  - frontend-gateway
  http:
  - match:
    - uri:
        prefix: "/one"
    rewrite:
      uri: "/ip"
    route:
    - destination:
        host: httpbin.default.svc.cluster.local
  - match:
    - uri:
        prefix: "/two"
    rewrite:
      uri: "/user-agent"
    route:
    - destination:
        host: httpbin-2.default.svc.cluster.local
